--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Animated.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/LoginForm/css/style.css">
 
 
 </head>
@@ -45,7 +45,7 @@
                     <input id="password" class="" type="password" name="password" id="password" placeholder="password">
                 </div>
                 <button id="btn-submit" class="btn btn-warning" type="submit">Log In</button>
-                <a class="password-forget" href="#">Sifremi unuttum</a>
+                <a class="password-forget" href="#">I forgot my password.</a>
                 <div class="social form-group">
                     <p>Log in with social media.</p>
                     <div class="social-wrap">
