--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Animated.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="/LoginForm/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
 </head>
